2002-09-25 TADA Tadahi <sho@spc.gr.jp>
	* plugin/recent-entry.rb: remove category from title.

2002-09-21 vette <vette at mail.ne.jp>
	* plugin/blog-category.rb: insert category list into update form.

2002-09-19 TADA Tadahi <sho@spc.gr.jp>
	* plugin/whatsnew-list.rb: add a checkbox for don't update RSS, and some bug fix.

2002-09-18 TADA Tadahi <sho@spc.gr.jp>
	* plugin/whatsnew-list.rb: append 'Comments(N)' and 'TrackBacks(M)' into
	description of RSS.
	* plugin/title-navi.rb: hide date fields also in showcomment mode.

2002-09-16 TADA Tadahi <sho@spc.gr.jp>
	* plugin/title-navi.rb: prev/next navigation in edit mode.
	* plugin/title-navi.rb: hide date fields in edit mode by CSS.
	* plugin/whatsnew-list.rb: check permission of RDF file.

2002-09-09 TADA Tadahi <sho@spc.gr.jp>
	* README: document improved.
	* recent-entry.rb: merge recent-entry2.rb into recent-entry.rb.
	* recent-entry2.rb: delete.
	* blog-category.rb, whatsnew-list.rb: show denial message in seure mode.

2002-09-08 TADA Tadahi <sho@spc.gr.jp>
	* plugin/whatsnew-list.rb: use description and benner in system preferences.

2002-09-06 TADA Tadahi <sho@spc.gr.jp>
	* plugin/whatsnew-list.rb: fix bad condition to output link element into
	HTML header.
	* plugin/whatsnew-list.rb: fix error when no banner setting.

2002-09-06 vette <vette at mail.ne.jp>
	* plugin/whatsnew-list.rb: fix about relative path of image and typo.

2002-09-05 TADA Tadahi <sho@spc.gr.jp>
	* tdiary/blogwiki_style.rb: support new Wiki style in tDiary 2.1.2.20050905.
	* plugin/blog-style.rb: overwrite subtitle_link to delete section anchor.
	* plugin/whatsnew-list.rb: title set to 'RSS' in link element of RSS
	AutoDiscovery.

2002-08-29 TADA Tadahi <sho@spc.gr.jp>
	* plugin/title-link.rb: disable link in day mode.
	* README*: add about title-link.rb plugin.

2002-08-26 TADA Tadahi <sho@spc.gr.jp>
	* plugin/blog-category.rb: support Plugin#title_proc, new feature after
	  tDiary 2.1.2.20050826.