@@ -1,5 +1,6 @@
 2002-09-25 TADA Tadahi <sho@spc.gr.jp>
 	* plugin/recent-entry.rb: remove category from title.
+	* plugin/whatnew-list.rb: apply_plugin for each entry.
 
 2002-09-21 vette <vette at mail.ne.jp>
 	* plugin/blog-category.rb: insert category list into update form.
